sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: type mismatch;
 found   : Boolean
 required: Int
		while(j>0 && getValeur(j-1>temp)){
                                          ^AlgInsertionSort:9: error: not found: value tab
			tab(j)=tab(j-1)
                        ^AlgInsertionSort:12: error: not found: value tab
		tab(j)=temp
                ^