sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	
	for(i<-1 to getNombreValeurs()-2)
	{
		val temp=getValeur(i)
		var j=i
		while(j>0 && getValeur(j-1>temp)){
			tab(j)=tab(j-1)
			j=j-1
		}
		tab(j)=temp
	}
}
